--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -7,3 +7,12 @@
        height:100px;
     }
 }
+//主页
+.home_xm_bottom{
+    width:100%;
+    position: absolute;
+    height:50px;
+    bottom: 0px;
+    left:0px;
+    background:gray;
+}
