--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -72,3 +72,67 @@
     overflow: auto;
     background:#c8c8c8;
 }
+//我播放的音乐
+.play-content{
+    float: left;
+    width:100%;
+    background:#fff;
+    position: absolute;
+    height:100%;
+    .play-tab-nav{
+        float: left;
+        width:100%;
+        height:42px;
+        .play-fh,
+        .play-fx{
+            width:42px;
+            height:42px;
+            line-height:42px;
+            text-align:center;
+            color:@color;
+            float: left;
+        };
+        .play-xx{
+            float: left;
+            width:calc(100% - 84px);
+            height:100%;
+            text-align:center;
+            color:@color;
+            div{
+                width:100%;
+                float: left;
+            };
+            div:nth-of-type(1){
+                height:24px;
+                line-height:24px;
+            };
+            div:nth-of-type(2){
+                height:18px;
+                line-height:18px;
+                font-size:12px;
+            };
+        }
+    }
+    .play-cover{
+        width:calc(100% - 84px);
+        margin:42px;
+        float: left;
+        img{
+            max-width:100%;
+        }
+    }
+    .play-btn{
+        width:calc(100% - 24px);
+        margin:0 0 0 12px;
+        float: left;
+        .play-btn-list{
+            float: left;
+            width:25%;
+            text-align:center;
+            color:@color; 
+            i{
+                font-size:20px;
+            }
+        }
+    }
+}
