--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -144,3 +144,46 @@
         }
     }
 }
+//精选
+.selected-home{
+    width: 100%;
+    float: left;
+    background:#EFEFF4;
+    .selected-title{
+        width:calc(100% - 24px);
+        float: left;
+        margin-left:12px;
+        height:45px;
+        .selected-tab,.selected-search{
+            width:50%;
+            float: left;
+            height:100%;
+        }
+        .selected-tab-list{
+            width:56px;
+            float: left;
+            height:100%;
+            line-height:38px;
+            color: @color;
+            text-align:left;
+        }
+        .selected-tab-list:nth-of-type(2){
+            margin-left:4px;
+        }
+        .tabActive{
+            font-size:20px;
+            color:#000;
+            position: relative;
+            transition-duration:100ms;
+        }
+        .tabActive:before{
+            content: '';
+            width: 20px;
+            height: 4px;
+            background: #ff3366;
+            position: absolute;
+            bottom: 5px;
+            left: 10px;
+        }
+    }
+}
