--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -70,7 +70,6 @@
     height:calc(100% - 50px);
     z-index: 9;
     overflow: auto;
-    background:#c8c8c8;
 }
 //我播放的音乐
 .play-content{
@@ -150,9 +149,9 @@
     float: left;
     background:#EFEFF4;
     .selected-title{
-        width:calc(100% - 24px);
+        width:calc(100% - 18px);
         float: left;
-        margin-left:12px;
+        margin-left:8px;
         height:45px;
         .selected-tab,.selected-search{
             width:50%;
@@ -184,6 +183,41 @@
             position: absolute;
             bottom: 5px;
             left: 10px;
+        }
+    }
+    .selected-content{
+        float: left;
+        width:100%;
+        background:#fff;
+    }
+    .selected-banner,
+    .selected-popular{
+        width:calc(100% - 18px);
+        float: left;
+        margin:8px;
+    }
+    .selected-popular-list{
+        width:20%;
+        float: left;
+        box-sizing:border-box;
+        padding:8px;
+        text-align:center;
+        .selected-popular-icon{
+            width:50px;
+            display:inline-block;
+            background:rgba(0,0,0,0.8);
+            height:50px;
+            border-radius:50%;
+            line-height:50px;
+            color:#fff;
+            i{
+                font-size:24px;
+            }
+        }
+        span{
+            font-size:12px;
+            line-height:24px;
+            display:inline-block;
         }
     }
 }
