--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -5,63 +5,24 @@
     float: left;
     width:100%;
 }
-.home_xm_bottom{
-    width:100%;
-    position: absolute;
+.home_xm_head{
+    position: fixed;
+    width:56px;
+    left:calc(50% - 28px);
+    padding:3px;
+    box-sizing: border-box;
     height:50px;
-    bottom: 0px;
+    bottom:14px;
+    background: #fff;
+    border-radius:50%;
     z-index: 99;
-    left:0px;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-tap-highlight-color: transparent;
-    .home_xm_list{
-        float: left;
-        width:20%;
-        color:@color;
-        margin-bottom:4px;
-        i,
-        span{
-            width:100%;
-            float: left;
-            display:block;
-            text-align:center;
-        };
-        i{
-            height:30px;
-            line-height:32px;
-            font-size:20px;
-        };
-        span{
-            height:16px;
-            line-height:16px;
-            font-size:12px;
-        }
-    }
-    .home_xm_list:nth-of-type(3),
-    .home_xm_list:nth-of-type(4){
-        float: right;
-    }
-    .active{
-        color:#ff3366;
-    }
-    .home_xm_head{
+    img{
+        width:52px;
+        height:52px;
+        display:block;
         position: absolute;
-        width:56px;
-        left:calc(50% - 28px);
-        padding:3px;
-        box-sizing: border-box;
-        height:50px;
-        bottom:14px;
-        background: #fff;
+        left:calc(50% - 26px);
         border-radius:50%;
-        img{
-            width:52px;
-            height:52px;
-            display:block;
-            position: absolute;
-            left:calc(50% - 26px);
-            border-radius:50%;
-        }
     }
 }
 .home-content{
