--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -16,4 +16,15 @@
     float: left;
     margin-top:42px;
     background:#fff;
+    .test-paper-title{
+        height:44px;
+        line-height:44px;
+        float: left;
+        width:100%;
+        text-align:center;
+    }
+    .test-paper-content{
+        float: left;
+        width:100%;
+    }
 }
