--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -27,5 +27,9 @@
     .test-paper-content{
         float: left;
         width:100%;
+        .test-paper-list{
+            margin-top:12px;
+            float: left;
+        }
     }
 }
