--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -33,3 +33,63 @@
         }
     }
 }
+//radioGroup
+.k-checkboxgroup{
+    width:calc(100% - 24px);
+    margin: 12px;
+    .tm-title{
+        width:100%;
+        float: left;
+        font-size: 18px;
+        font-weight: 600
+    }
+}
+//radio
+.k-radio{
+    float: left;
+    margin: 6px 0;
+    padding: 12px;
+    box-sizing: border-box;
+    border: solid 1px gainsboro;
+    .magic-radio{
+      display:none;
+      
+    }
+    .k-radio-img{
+      max-width: 100%;
+      display: block;
+      border: none;
+      margin-top: 12px;
+      float: left;
+    }
+    .k-ra-radio{
+      width:20px;
+      height:20px;
+      background:#fff;
+      display:inline-block;
+      box-sizing:border-box;
+      border-radius:4px;
+      line-height:20px;
+      text-align:center;
+      position: relative;
+      float: left;
+      border-radius:50%;
+      border:solid 1px gainsboro;
+      i{
+        font-size: 20px;
+        position:absolute;
+        left: -5px;
+        top: -1px;
+      }
+    }
+    .k-ra-text{
+      float: left;
+      width:calc(100% - 26px);
+      line-height:20px;
+      margin-left:4px;
+      overflow: hidden;
+      text-overflow:ellipsis;
+      white-space: nowrap;
+    }
+  }
+  
