--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -16,12 +16,6 @@
         margin-left:calc(50% - 128px);
         float: left;
     }
-    div{
-        float: left;
-        text-align: center;
-        width: 100%;
-        line-height: 56px;
-    }
 } 
 //index
 .k-vui-index{
@@ -55,5 +49,30 @@
             line-height: 42px;
             text-align: center;
         }
+    }
+}
+.demo-box{
+    float: left;
+    width:100%;
+}
+//icon
+.icon-list{
+    float: left;
+    width:33.33%;
+    float: left;
+    height:78px;
+    text-align: center;
+    i{
+        display:block;
+        margin:12px 0 3px 0;
+    }
+    span{
+        display: block;
+        margin:3px 0 12px 14%;
+        font-size:12px;
+        width: 72%;
+        overflow: hidden;
+        text-overflow:ellipsis;
+        white-space: nowrap;
     }
 }
