--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -1,10 +1,8 @@
 //home
 .home{
- position: absolute;
+ position: relative;;
  width: 100%;
- height: 100%;
- left: 0px;
- top: 0px;
+ float: left;
  background: #fff;
 }
 .home-logo{
@@ -18,6 +16,14 @@
     }
 } 
 //index
+.comp-con-title{
+    width: 100%;
+    float: left;
+    text-indent: 12px;
+    font-size: 14px;
+    line-height: 36px;
+    background: #f9f9f9;
+}
 .k-vui-index{
     float:left;
     width: 100%;
