--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -40,19 +40,19 @@
         width:calc(100% - 24px);
         margin-left:12px;
         float: left;
-        line-height: 42px;
-        height:42px;
+        line-height: 46px;
+        height:46px;
         border-bottom: solid 1px #efeded;
         font-size: 13px;
         .comp-list-title{
-            width: calc(100% - 42px);
+            width: calc(100% - 46px);
             float: left;
         }
         .comp-list-icon{
-            width: 42px;
-            height: 42px;
+            width: 46px;
+            height: 46px;
             float: left;
-            line-height: 42px;
+            line-height: 46px;
             text-align: center;
         }
     }
@@ -68,6 +68,7 @@
     float: left;
     height:78px;
     text-align: center;
+    color: #5c6b77;
     i{
         display:block;
         margin:12px 0 3px 0;
