--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -60,6 +60,11 @@
 .demo-box{
     float: left;
     width:100%;
+    .comp-in{
+        float: left;
+        width:98%;
+        margin-top:12px;
+    }
 }
 //icon
 .icon-list{
