--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -44,6 +44,7 @@
         height:46px;
         border-bottom: solid 1px #efeded;
         font-size: 13px;
+        position: relative;
         .comp-list-title{
             width: calc(100% - 46px);
             float: left;
@@ -54,7 +55,26 @@
             float: left;
             line-height: 46px;
             text-align: center;
+            
         }
+    }
+    .comp-list::before{
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        border: inherit;
+        border-color: #000;
+        background-color: #000;
+        border-radius: inherit;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+    .comp-list:active::before {
+        opacity: 0.1;
     }
 }
 .demo-box{
