--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -108,3 +108,44 @@
         white-space: nowrap;
     }
 }
+.k-switch-list{
+    width:96%;
+    margin:0px 2%;
+    height:38px;
+    line-height:38px;
+    float: left;
+    .title{
+      line-height:32px;
+      width:100%;
+      margin-left:4px;
+      float: left;
+      border-bottom: solid 1px gainsboro;
+    }
+    span{
+        display:inline-block;
+        float:right;
+    }
+  }
+  .btn-title{
+    width:100%;
+    float: left;
+    line-height:36px;
+    text-indent:16px;
+    margin-top:22px;
+    background: #f9f9f9;
+  }
+  .btn-list{
+    margin:6px 4%;
+    float: left;
+    div{
+      width:50%;
+      float: left;
+      padding:0px 4px;
+      box-sizing:border-box;
+    }
+  }
+  .btn-max{
+    width:92%;
+    text-indent:0px;
+    margin:6px 4%;
+  }
